project(TodoList)

add_executable(
    TodoList
    BasicInfo.h
    BasicInfo.c
    CompleteCheck.c
    CompleteCheck.h
    DeleteTodoList.c
    DeleteTodoList.h
    EditDateMac.c
    EditDateMac.h
    EditImportance.c
    EditImportance.h
    EditTodoList.c
    EditTodoList.h
    InputTodoList.c
    InputTodoList.h
    mainMac.c
)